sales page overflow fixed

--- a/src/components/salesAnalysisPage/salesAnalysisPage.module.css
+++ b/src/components/salesAnalysisPage/salesAnalysisPage.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   flex-direction: column;
   width: 80%;
-  height: 80%;
+  height: 100%;
 }
 
 .section__bar {
